syntax = "proto3";

option go_package = "github.com/shotowon/kon.io/api/gen/go/sso/v1/auth;auth";

package auth;

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc UsernameLogin(UsernameLoginRequest) returns (UsernameLoginResponse);
  rpc EmailLogin(EmailLoginRequest) returns (EmailLoginResponse);
  rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse);
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse { string user_id = 1; }

message UsernameLoginRequest {
  string username = 1;
  string password = 2;
  string app_id = 3;
}

message EmailLoginRequest {
  string email = 1;
  string password = 2;
  string app_id = 3;
}

message UsernameLoginResponse { string token = 1; }
message EmailLoginResponse { string token = 1; }

message IsAdminRequest { string user_id = 1; }

message IsAdminResponse { bool is_admin = 1; }